# book_manage

./: .gitignore  CMakeLists.txt  README.md  book_manage.h  books.txt  books_manage.c  borrow_return.c  borrow_return.h  main.c  name.txt  name2.txt  name3.txt  reader_manage.c  reader_manage.h
book_manage/: book_manage.h  books.txt  books_manage.c  init_book.c
book_manage/details/: add_book.c  delete_book.c  modify_book.c  qurry_book.c  show_book.c
borrow_return/: borrow.txt  borrow_return.c  borrow_return.h  init.c  return.txt
borrow_return/details/: borrow.c  return.c  utils.c
reader_manage/: init.c  name.txt  reader_manage.c  reader_manage.h
reader_manage/reader details/: add_reader.c  delete_reader.c  modify_reader.c  search.c  show_reader.c
